# easy-plot

./: .gitignore  README.md  dprint.json  pyproject.toml  wsl_config.json
examples/: multisample.csv  multisample_hue.csv  twosample.csv
src/easy_plot/: cld.py  cld_test.py  config.py  default_config.py  handlers.py  main.py  multisample.py  twosample.py
