[project]
name = "easy-plot"
version = "0.1.0"
description = "Add a short description here"
authors = [
  { name = "illumination-k", email = "illumination.k.27@gmail.com" },
]
dependencies = [
  "matplotlib~=3.7.1",
  "seaborn~=0.11",
  "scipy~=1.10.1",
  "pandas~=2.0.2",
  "numpy~=1.24.3",
  "statsmodels~=0.14.0",
  "statannotations~=0.5.0",
  "pydantic~=1.10.8",
  "networkx~=3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
easy-plot = "easy_plot.main:main"

[tool.rye]
managed = true
dev-dependencies = ["black~=23.3.0", "isort~=5.12.0"]
[tool.hatch.metadata]
allow-direct-references = true
