[project]
name = "easy-plot"
version = "0.1.0"
description = "Add a short description here"
authors = [
  { name = "illumination-k", email = "illumination.k.27@gmail.com" },
]
dependencies = [
  "matplotlib~=3.7.1",
  "seaborn~=0.11",
  "scipy~=1.10.1",
  "pandas~=2.0.2",
  "numpy~=1.24.3",
  "statsmodels~=0.14.0",
  "statannotations~=0.5.0",
  "pydantic~=1.10.8",
  "networkx~=3.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
easy-plot = "easy_plot.main:main"

[tool.rye]
managed = true
dev-dependencies = [
  "black~=23.3.0",
  "isort~=5.12.0",
  "mypy~=1.3.0",
  "pandas-stubs~=2.0.1.230501",
  "pytest~=7.3.1",
]

[tool.rye.scripts]
fmt = { chain = ["fmt:black", "fmt:isort", "fmt:dprint"] }
"fmt:black" = "black ."
"fmt:isort" = "isort ."
"fmt:dprint" = "dprint fmt"
lint = { chain = ["lint:black", "lint:mypy", "lint:dprint"] }
"lint:mypy" = "mypy ."
"lint:black" = "black --check ."
"lint:dprint" = "dprint check"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
exclude = '''
/(
  # These would already be ignored by pants, but having them here allows for manually running Black if one so wishes.
  | \.venv
  | \.git
  | \.mypy_cache
  | dist
  | \.pants\.d
  | virtualenvs
  # This file intentionally contains invalid syntax
  # It trips black up.
  | compilation_failure
)/
'''

[tool.isort]
profile = "black"
line_length = 100
color_output = true
